# hello

./: README.md
MAVignau/: HOW-TO.TXT  Makefile  Makefile.in  aclocal.m4  config.status  configure  configure.ac
MAVignau/autom4te.cache/: output.1  requests  traces.0  traces.1
MAVignau/locale/es_AR/LC_MESSAGES/: pyhello.po
MAVignau/src/: Makefile  Makefile.am  Makefile.am~  Makefile.in  pyhello  pyhello.py  test_pyHello.py
carlossisek/: hello.py
carlossisek/locales/es/LC_MESSAGES/: hello.po
oscarvogel/: hello.py  internacional.py
oscarvogel/locales/es/LC_MESSAGES/: hello (copia).po  hello.po
